--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Bienvenido a la página de Esquadron</h1>
+            <h1>Bienvenido a la página de Esquadron Se removera esta pagina</h1>
           </hgroup>
 
 
