--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,6 +13,7 @@
 	Landing
 	<h:form>
 		<h:commandLink>Mis tareas</h:commandLink>
+		<h:commandLink>Alumnos</h:commandLink>
 	</h:form>
 </h:body>
 </html>
