Integración del servicio de alumnos con jsf

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 	Landing
 	<h:form>
 		<h:commandLink>Mis tareas</h:commandLink>
-		<h:commandLink>Alumnos</h:commandLink>
+		<h:commandLink value="Alumnos" action="alumnos"/>
 	</h:form>
 </h:body>
 </html>
