--- a/tecolotl-web/src/main/webapp/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/alumnos.xhtml
@@ -4,11 +4,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions">
 
 <h:body>
-	<ui:repeat var="alumno" value="#{alumnoControl.lista}">
-		<h:outputText value="#{alumno.apodo}"/>
-	</ui:repeat>
+	<ui:composition template="/template/template.html">
+		<ui:define name="contenido">
+			<h:dataTable value="#{alumnoControl.lista}" var="alumno" border="1">
+				<f:facet name="header">
+				    <h:outputText value="Alumnos" />
+				</f:facet>
+				<h:column>
+				    <f:facet name="header">
+				    	<h:outputText value="Nombre:" />
+				    </f:facet>
+				    <h:outputText value="#{alumno.nombre}" />
+			  	</h:column>
+			  	<h:column>
+				    <f:facet name="header">
+				    	<h:outputText value="Apellido Paterno:" />
+				    </f:facet>
+				    <h:outputText value="#{alumno.apellidoPaterno}" />
+			  	</h:column>
+			  	<f:facet name="footer">
+			  		<h:outputText value="Total de alumnos:#{fn:length(alumnoControl.lista)}"/>
+			  	</f:facet>
+			</h:dataTable>			
+		</ui:define>
+	</ui:composition>	
 </h:body>
 </html>
