prueba de clases en jsf boton

--- a/tecolotl-web/src/main/webapp/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/alumnos.xhtml
@@ -29,7 +29,8 @@
 			  	<f:facet name="footer">
 			  		<h:outputText value="Total de alumnos:#{fn:length(alumnoControl.lista)}"/>
 			  	</f:facet>
-			</h:dataTable>			
+			</h:dataTable>	
+			<h:commandButton value="bton1" styleClass="waves-effect waves-light btn" ></h:commandButton>		
 		</ui:define>
 	</ui:composition>	
 </h:body>
