agregamos el archivo de idioma para botones y se agrego logo

--- a/tecolotl-web/src/main/webapp/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/alumnos.xhtml
@@ -30,7 +30,7 @@
 			  		<h:outputText value="Total de alumnos:#{fn:length(alumnoControl.lista)}"/>
 			  	</f:facet>
 			</h:dataTable>	
-			<h:commandButton value="bton1" styleClass="waves-effect waves-light btn" ></h:commandButton>		
+			<h:commandButton value="#{mensaje['button.accept']}" styleClass="waves-effect waves-light btn" />		
 		</ui:define>
 	</ui:composition>	
 </h:body>
