se agrega videoteca

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -14,6 +14,7 @@
 	<h:form>
 		<h:commandLink>Mis tareas</h:commandLink>
 		<h:commandLink value="Alumnos" action="alumnos"/>
+		<h:commandLink value="Dashbord" action="dashbord"/>
 	</h:form>
 </h:body>
 </html>
