--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,8 +13,7 @@
 	Landing
 	<h:form>
 		<h:commandLink>Mis tareas</h:commandLink>
-		<h:commandLink value="Alumnos" action="alumnos"/>
-		<h:commandLink value="Dashbord" action="dashbord"/>
+		<h:commandLink value="Login" action="login"/>
 	</h:form>
 </h:body>
 </html>
