centrado de logo

--- a/tecolotl-web/src/main/webapp/login.xhtml
+++ b/tecolotl-web/src/main/webapp/login.xhtml
@@ -25,7 +25,7 @@
             <h:form>
                 <fieldset class="uk-fieldset">
                     <legend class="uk-legend">
-                        <h:graphicImage value="resources/img/Favicon_64.png" />
+                        <h:graphicImage styleClass="uk-align-center" value="resources/img/Favicon_64.png" />
                     </legend>
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
