en arquilian se configuro local y en alumno implemente breadcrum

--- a/tecolotl-web/src/main/webapp/alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno.xhtml
@@ -8,7 +8,10 @@
 
     <ui:composition template="template/template.xhtml">
         <ui:define name="contenido">
-            Texto
+            <ul class="uk-breadcrumb">
+			    <li><a href="#">Alumno</a></li>
+			</ul>
+            
         </ui:define>
     </ui:composition>
 
