--- a/tecolotl-web/src/main/webapp/alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno.xhtml
@@ -8,6 +8,9 @@
 
     <ui:composition template="template/template.xhtml">
         <ui:define name="contenido">
+         <ul class="uk-breadcrumb">
+		    <li><a href="#">Alumno</a></li>
+		 </ul>
         
         <h:body>
         
