--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,8 +12,9 @@
 <h:body>
 	Landing
 	<h:form>
-		<h:commandLink>Mis tareas</h:commandLink>
-		<h:commandLink value="Login" action="login"/>
+		<h:commandLink>Mis tareas</h:commandLink><br/>
+		<h:commandLink value="Login" action="login"/><br/>
+		<h:commandLink value="Administracion" action="admin"/>
 	</h:form>
 </h:body>
 </html>
