--- a/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
@@ -31,7 +31,7 @@
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: user"/>
-                            <input type="text" class="uk-input" name="j_username"/>
+                            <input type="text" class="uk-input" name="j_username" autofocus="autofocus"/>
                         </div>
                     </div>
                     <div class="uk-margin uk-child-width-1-1\@s">
