--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -9,16 +9,36 @@
     <ui:composition template="/template/template.xhtml">
         <ui:define name="contenido2">
            <div id="content" data-uk-height-viewport="expand: true">
+			   <div class="uk-padding">
 	            <h:dataTable id="tablaEscuela" value="#{escuelaControlador.obtener()}" var="escuela" styleClass="uk-table">
 	                <h:column>
 	                    <f:facet name="header">CCT</f:facet>
 	                    #{escuela.claveCentroTrabajo}
+						<f:facet name="footer">CCT</f:facet>
 	                </h:column>
 	                <h:column>
 	                    <f:facet name="header">Nombre</f:facet>
 	                    #{escuela.nombre}
 	                </h:column>
+					<h:column>
+						<f:facet name="header">Estatus</f:facet>
+						<h:outputLabel rendered="#{escuela.estatus}">
+							<span class="uk-icon-button" uk-icon="check"/>
+						</h:outputLabel>
+						<h:outputLabel rendered="#{not escuela.estatus}">
+							<span class="uk-icon-button" uk-icon="close"/>
+						</h:outputLabel>
+					</h:column>
+					<h:column>
+						<f:facet name="header">Licencias</f:facet>
+						#{escuela.licencias}
+					</h:column>
+					<h:column>
+						<f:facet name="header">Dias Restantes</f:facet>
+						#{escuela.diasRestantes}
+					</h:column>
 	            </h:dataTable>
+			   </div>
            </div> 
         </ui:define>
     </ui:composition>
