Se agrega la bitácora para la escuela

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -44,7 +44,8 @@
 					</h:column>
 	            </h:dataTable>
 			   </div>
-           </div> 
+           </div>
+            <h:outputScript library="js" name="tabla.js"/>
         </ui:define>
     </ui:composition>
 
