Modal de agregar hasta los datos de la dirección

--- a/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
@@ -26,7 +26,7 @@
             <form method="POST" action="j_security_check">
                 <fieldset class="uk-fieldset">
                     <legend class="uk-legend">
-                        <h:graphicImage styleClass="uk-align-center" value="../resources/img/Favicon_64.png" />
+                        <h:graphicImage styleClass="uk-align-center" library="img" name="esquadron.svg" />
                     </legend>
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
