se arreglo error de estilo de logeo

--- a/tecolotl-web/src/main/webapp/WEB-INF/error.xhtml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/error.xhtml
@@ -22,11 +22,11 @@
 
 <h:body>
     <div class="uk-height-1-1 uk-flex uk-flex-center uk-flex-middle">
-        <div class="uk-card uk-card-default uk-card-hover uk-card-body uk-border-rounded">
+        <div class="uk-card uk-card-default  uk-card-body uk-border-rounded">
             <form method="POST" action="j_security_check">
                 <fieldset class="uk-fieldset">
                     <legend class="uk-legend">
-                        <h:graphicImage styleClass="uk-align-center" value="../resources/img/Favicon_64.png" />
+                        <h:graphicImage styleClass="uk-align-center" value="../resources/img/esquadron.svg" />
                     </legend>
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
