--- a/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
@@ -22,7 +22,7 @@
 
 <h:body>
     <div class="uk-height-1-1 uk-flex uk-flex-center uk-flex-middle">
-        <div class="uk-card uk-card-default uk-card-hover uk-card-body uk-border-rounded">
+        <div class="uk-card uk-card-default  uk-card-body uk-border-rounded">
             <form method="POST" action="j_security_check">
                 <fieldset class="uk-fieldset">
                     <legend class="uk-legend">
