se subio estilo tablas

--- a/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/login.xhtml
@@ -31,13 +31,13 @@
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: user"/>
-                            <input type="text" class="uk-input" name="j_username" autofocus="autofocus"/>
+                            <input type="text" class="uk-input" name="j_username" autofocus="autofocus"  minlength="2" maxlength="15"  />
                         </div>
                     </div>
                     <div class="uk-margin uk-child-width-1-1\@s">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: lock"/>
-                            <input type="password" name="j_password" class="uk-input"/>
+                            <input type="password" name="j_password" class="uk-input" maxlength="15"/>
                         </div>
                     </div>
                     <div class="uk-margin">
