--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -78,7 +78,7 @@
 						   <div class="uk-modal-body">
 							   <div class="uk-grid-small" uk-grid="">
 								   <div class="uk-width-1-1@s uk-width-1-3@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Clave Centro trabajo"/>
+									   <h:inputText styleClass="uk-input" pt:placeholder="Clave Centro trabajo" value="#{escuelaControlador.escuelaModelo.claveCentroTrabajo}"/>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-2-3@m">
 									   <h:inputText styleClass="uk-input" pt:placeholder="Nombre"/>
@@ -123,7 +123,7 @@
 						   <div class="uk-modal-footer ">
 							   <div class="uk-flex uk-flex-right">
 								   <h:commandButton id="cancelar" styleClass="uk-button uk-button-default uk-border-rounded uk-margin-right" value="#{mensaje['button.cancel']}" />
-								   <h:commandButton id="aceptar" styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}"/>
+								   <h:commandButton id="aceptar" styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}" actionListener="#{escuelaControlador.inserta()}"/>
 							   </div>
 						   </div>
 					   </h:form>
