--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -47,9 +47,9 @@
 								<button class="uk-icon-button puntero" uk-icon="more-vertical" type="button"></button>
 								<div uk-dropdown="boundary:.limite; mode: click" >
 									<ul class="uk-nav uk-dropdown-nav">
-										<li><a href="#">Detalle</a></li>
-										<li><a href="#">Editar</a></li>
-										<li><a href="#">Eliminar</a></li>
+										<li><a href="#" > <span uk-icon="icon: cog" class="uk-margin-small-right uk-icon" ></span>  <span class="uk-text-middle">Detalle</span> </a></li>
+										<li><a href="#"><span uk-icon="icon: file-edit" class="uk-margin-small-right uk-icon" ></span>  <span class="uk-text-middle">Editar</span></a></li>
+										<li><a href="#" ><span uk-icon="icon: trash" class="uk-margin-small-right uk-icon" ></span>  <span class="uk-text-middle">Eliminar</span></a></li>
 									</ul>
 								</div>
 							</div>
