Modal para revision con juan

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,9 +12,7 @@
 <h:body>
 	Landing
 	<h:form>
-		<h:commandLink>Mis tareas</h:commandLink><br/>
-		<h:commandLink value="Login" action="login"/><br/>
-		<h:commandLink value="Administracion" action="admin"/>
+		<h:commandLink value="Administracion" action="/administracion/dashboard.xhtml"/>
 	</h:form>
 </h:body>
 </html>
