--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -22,7 +22,7 @@
 						</h:column>
 						<h:column>
 							<f:facet name="header">Nombre</f:facet>
-							#{escuela.nombre}
+							<h:outputText value="#{escuela.nombre}" styleClass="uk-text-middle"/>
 						</h:column>
 						<h:column>
 							<f:facet name="header">Estatus</f:facet>
@@ -73,47 +73,128 @@
 			   <div id="modal-nuevo"  uk-modal="">
 				   <button class="uk-modal-close-default" type="button" uk-close=""></button>
 				   <div class="uk-modal-header">
-					   <h:form id="formulario-nuevo">
-						   <h5 class="uk-modal-title uk-text-capitalize uk-text-center"><h:outputText value="#{mensaje['scchool.add.title']}"/></h5>
+					   <h:form id="formulario-nuevo" class="uk-form-stacked">
+						   <h5 class="uk-modal-title uk-text-capitalize uk-text-center"><h:outputText value="#{mensaje['school.add.title']}"/></h5>
 						   <div class="uk-modal-body">
 							   <div class="uk-grid-small" uk-grid="">
 								   <div class="uk-width-1-1@s uk-width-1-3@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Clave Centro trabajo" value="#{escuelaControlador.escuelaModelo.claveCentroTrabajo}"/>
+									   <h:outputLabel styleClass="uk-text-capitalize uk-form-label" value="#{mensaje['school.cct']}" for="input-cct"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														pt:placeholder="#{mensaje['school.cct']}"
+														value="#{escuelaControlador.escuelaModelo.claveCentroTrabajo}"
+														id="input-cct"
+										   				label="#{mensaje['school.cct']}">
+											   <f:validateRequired/>
+											   <f:validateLength minimum="9" maximum="11"/>
+											   <f:validator binding="#{claveCentroTrabajoValidacion}"/>
+										   </h:inputText>
+									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-2-3@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Nombre"/>
+									   <h:outputLabel styleClass="uk-text-capitalize uk-form-label" value="#{mensaje['school.name']}" for="input-nombre"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-nombre"
+														pt:placeholder="#{mensaje['school.name']}"
+														value="#{escuelaControlador.escuelaModelo.nombre}"
+														label="#{mensaje['school.name']}">
+											   <f:validateRequired/>
+											   <f:validateLength minimum="5" maximum="70"/>
+										   </h:inputText>
+									   </div>
 								   </div>
 								   <!-- Busqueda de la dirección -->
 								   <div class="uk-width-1-1@s uk-width-1-3@m">
-    								   <h:inputText styleClass="uk-input" id="input-codigo-postal" pt:placeholder="Código Postal" value="#{direccionControlador.codigoPostal}" required="true">
-    								   		<f:validateLength minimum="4" maximum="5"/>
-    								   </h:inputText>
+									   <h:outputLabel styleClass="uk-text-capitalize uk-form-label" value="#{mensaje['school.postalcode']}" for="input-codigo-postal"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-codigo-postal"
+														pt:placeholder="#{mensaje['school.postalcode']}"
+														value="#{direccionControlador.codigoPostal}"
+														label="#{mensaje['school.postalcode']}">
+												<f:validateLength minimum="4" maximum="5"/>
+											   <f:validateRequired/>
+										   </h:inputText>
+									   </div>
 								   </div>
-								   <div class="uk-width-1-1@s uk-width-1-3@m">
+								   <div class="uk-width-1-1@s uk-width-1-6@m">
 									   <h:commandButton id="boton-direccion" value="Buscar" styleClass="uk-button uk-button-secondary uk-border-rounded">
 										   <f:ajax event="click" execute="formulario-nuevo:input-codigo-postal" listener="#{direccionControlador.busca()}" render="formulario-nuevo"/>
 									   </h:commandButton>
 								   </div>
-								   <div class="uk-width-1-1@s uk-width-1-3@m">
-								   	<h:selectOneMenu styleClass="uk-select">
-										<f:selectItems value="#{direccionControlador.codigoPostalList}" var="#{codigoPostalLocal}" itemValue="#{codigoPostalLocal.CodigoPostal.id}" itemLabel="#{codigoPostalLocal.CodigoPostal.nombre}"/>
-									</h:selectOneMenu>
+								   <div class="uk-width-1-1@s uk-width-1-2@m">
+									   <h:outputLabel for="select-colonia" value="#{mensaje['school.colony']}" styleClass="uk-form-label uk-text-capitalize"/>
+									   <div class="uk-form-controls">
+											<h:selectOneMenu styleClass="uk-select"
+															 id="select-colonia"
+															 value="#{escuelaControlador.escuelaModelo.idColonia}"
+															 label="#{mensaje['school.colony']}">
+												<f:selectItems value="#{direccionControlador.codigoPostalList}"
+															   var="#{n}"
+															   itemValue="#{n.id}"
+															   itemLabel="#{n.nombre}"
+															   itemDescription="#{n.nombre}"/>
+												<f:validateRequired/>
+											</h:selectOneMenu>
+									   </div>
 							       </div>
 								   <div class="uk-width-1-1@s uk-width-1-2@m">
-									   <h:inputText styleClass="uk-input" value="#{direccionControlador.municipio}" readonly="true" pt:placeholder="Municipio"/>
+									   <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{mensaje['school.city']}" for="input-municipio"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-municipio"
+														value="#{direccionControlador.municipio}"
+														readonly="true"
+														pt:placeholder="#{mensaje['school.city']}"/>
+									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-1-2@m">
-									   <h:inputText styleClass="uk-input" value="#{direccionControlador.estado}" readonly="true" pt:placeholder="Estado"/>
+									   <h:outputLabel id="label-estado" for="input-estado" value="#{mensaje['school.town']}" styleClass="uk-text-capitalize uk-form-label"/>
+									   <h:inputText styleClass="uk-input"
+													id="input-estado"
+													value="#{direccionControlador.estado}"
+													readonly="true"
+													pt:placeholder="#{mensaje['school.town']}"/>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-2-3@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Calle"/>
+									   <h:outputLabel id="label-calle" for="input-calle" value="#{mensaje['school.street']}" styleClass="uk-text-capitalize uk-form-label"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-calle"
+														pt:placeholder="#{mensaje['school.street']}"
+														value="#{escuelaControlador.escuelaModelo.calle}"
+														label="#{mensaje['school.street']}">
+											   <f:validateRequired/>
+											   <f:validateLength maximum="60" minimum="10"/>
+										   </h:inputText>
+									   </div>
 								   </div>
 								   <!--	numero exterior -->
 								   <div class="uk-width-1-1@s uk-width-1-6@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Número Ext."/>
+									   <h:outputLabel id="label-numero-exterior" value="#{mensaje['school.street.num.int']}" styleClass="uk-text-capitalize uk-form-label"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-numero-interior"
+														pt:placeholder="#{mensaje['school.street.num.int']}"
+														value="#{escuelaControlador.escuelaModelo.numeroInterior}"
+														label="#{mensaje['school.street.num.int']}">
+											   <f:validateRequired/>
+											   <f:validateLength minimum="1" maximum="15"/>
+										   </h:inputText>
+									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-1-6@m">
-									   <h:inputText styleClass="uk-input" pt:placeholder="Número Int."/>
+									   <h:outputLabel id="label-nummero-exterior" value="#{mensaje['school.street.num.ext']}" styleClass="uk-form-label uk-text-capitalize"/>
+									   <div class="uk-form-controls">
+										   <h:inputText styleClass="uk-input"
+														id="input-numero-exterior"
+														pt:placeholder="#{mensaje['school.street.num.ext']}"
+														value="#{escuelaControlador.escuelaModelo.numeroExterior}"
+														label="#{mensaje['school.street.num.ext']}">
+											   <f:validateLength maximum="15"/>
+										   </h:inputText>
+									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s">
 								   	<h:messages styleClass="uk-list uk-alert-danger uk-alert"/>
@@ -122,15 +203,30 @@
 						   </div>
 						   <div class="uk-modal-footer ">
 							   <div class="uk-flex uk-flex-right">
-								   <h:commandButton id="cancelar" styleClass="uk-button uk-button-default uk-border-rounded uk-margin-right" value="#{mensaje['button.cancel']}" />
-								   <h:commandButton id="aceptar" styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}" actionListener="#{escuelaControlador.inserta()}"/>
+								   <button class="uk-modal-close uk-button uk-button-default uk-border-rounded uk-margin-right"><h:outputText value="#{mensaje['button.cancel']}"/></button>
+								   <h:commandButton id="aceptar" styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}">
+									   <f:ajax execute="@form" event="click" listener="#{escuelaControlador.inserta()}" render="formulario-nuevo" onevent="cierraModal"/>
+								   </h:commandButton>
 							   </div>
 						   </div>
 					   </h:form>
 				   </div>
 			   </div>
 		   	</div>
-			<h:outputScript library="js" name="tabla.js"/>
+			<script type="text/javascript">
+				document.addEventListener("DOMContentLoaded", function (evt) {
+					document.querySelectorAll('')
+				});
+				function limpiarSelector(selector) {
+
+				}
+				function cierraModal(informacion) {
+					console.log(informacion);
+					if (informacion === "success") {
+						UIkit.modal('.uk-modal').hide();
+					}
+				}
+			</script>
         </ui:define>
     </ui:composition>
 
