--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -57,16 +57,6 @@
 						</h:column>
 					</h:dataTable>
 				  	</div>
-				   <ul class="uk-pagination uk-flex-center uk-margin-medium-top" uk-margin="">
-					   <li><a href="#"><span uk-pagination-previous=""></span></a></li>
-					   <li><a href="#">1</a></li>
-					   <li class="uk-disabled"><span>...</span></li>
-					   <li><a href="#">5</a></li>
-					   <li><a href="#">6</a></li>
-					   <li class="uk-active"><span>7</span></li>
-					   <li><a href="#">8</a></li>
-					   <li><a href="#"><span uk-pagination-next=""></span></a></li>
-				   </ul>
 					<div class="uk-flex uk-flex-right uk-margin">
 						<button class="uk-button uk-button-primary uk-border-rounded" uk-toggle="target: #modal-nuevo"><h:outputText value="#{mensaje['button.add']}"/></button>
 					</div>
@@ -120,11 +110,11 @@
 									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-1-6@m uk-inline">
-									   <h:commandButton id="boton-direccion" value="Buscar" styleClass="uk-button uk-button-secondary uk-border-rounded uk-position-bottom-center">
+									   <h:commandButton id="boton-direccion" value="#{mensaje['button.search']}" styleClass="uk-button uk-button-secondary uk-border-rounded uk-position-bottom-center">
 										   <f:ajax event="click"
 												   execute="formulario-nuevo:input-codigo-postal"
 												   listener="#{direccionControlador.busca()}"
-												   render="select-colonia input-municipio input-estado" onevent="limpiarSelector"/>
+												   render="formulario-nuevo:select-colonia input-municipio input-estado mensajes-error" onevent="limpiarSelector"/>
 									   </h:commandButton>
 								   </div>
 								   <div class="uk-width-1-1@s uk-width-1-2@m">
@@ -135,10 +125,10 @@
 															 value="#{escuelaControlador.escuelaModelo.idColonia}"
 															 label="#{mensaje['school.colony']}">
 												<f:selectItems value="#{direccionControlador.codigoPostalList}"
-															   var="n"
-															   itemValue="#{n.id}"
-															   itemLabel="#{n.nombre}"
-															   itemDescription="#{n.nombre}"/>
+															   var="colonia"
+															   itemValue="#{colonia.id}"
+															   itemLabel="#{colonia.nombre}"
+															   itemDescription="#{colonia.nombre}"/>
 												<f:validateRequired/>
 											</h:selectOneMenu>
 									   </div>
@@ -201,7 +191,7 @@
 									   </div>
 								   </div>
 								   <div class="uk-width-1-1@s">
-								   	<h:messages styleClass="uk-list uk-alert-danger uk-alert"/>
+								   	<h:messages showDetail="false" styleClass="uk-list uk-alert-danger uk-alert" id="mensajes-error"/>
 								   </div>
 							   </div>
 						   </div>
@@ -209,7 +199,7 @@
 							   <div class="uk-flex uk-flex-right">
 								   <button class="uk-modal-close uk-button uk-button-default uk-border-rounded uk-margin-right"><h:outputText value="#{mensaje['button.cancel']}"/></button>
 								   <h:commandButton id="aceptar" styleClass="uk-button uk-button-primary uk-border-rounded" value="#{mensaje['button.accept']}">
-									   <f:ajax execute="@form" event="click" listener="#{escuelaControlador.inserta()}" onevent="cierraModal"/>
+									   <f:ajax execute="@form" event="click" listener="#{escuelaControlador.inserta()}" render="mensajes-error"/>
 								   </h:commandButton>
 							   </div>
 						   </div>
