--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -25,7 +25,7 @@
 									value="#{mensaje['school.cct']}" for="input-cct" />
 								<div class="uk-form-controls">
 									<h:inputText styleClass="uk-input"
-										value="21PPR0930Z" disabled="true"
+										value="#{escuelaControlador.escuelaDetalleDto.claveCentroTrabajo}" disabled="true"
 										id="input-cct" label="#{mensaje['school.cct']}">
 									</h:inputText>
 								</div>
