La vista de detalle-escuela con datos correctos

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 <h:body>
 	Landing
 	<h:form>
-		<h:commandLink value="Administracion" action="/administracion/dashboard.xhtml"/>
+		<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/>
 	</h:form>
 </h:body>
 </html>
